<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.calftracker.project.activities.EditIllnessProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.constraint.Guideline
                android:id="@+id/vertical55percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.55" />

            <android.support.constraint.Guideline
                android:id="@+id/vertical45percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.45" />

            <TextView
                android:id="@+id/editIllnessProfile_illnessName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/illness_profile_name"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/vertical45percent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editIllnessProfile_enterName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:gravity="end"
                android:hint="Enter Name"
                android:inputType="text"
                android:textAlignment="textStart"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/editIllnessProfile_illnessName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/vertical55percent"
                app:layout_constraintTop_toTopOf="@+id/editIllnessProfile_illnessName" />

            <TextView
                android:id="@+id/editIllnessProfile_notes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:text="@string/illness_profile_notes"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editIllnessProfile_illnessName" />

            <EditText
                android:id="@+id/editIllnessProfile_enterNotes"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:ems="10"
                android:gravity="top|left"
                android:hint="Enter Notes"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:scrollbars="vertical"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editIllnessProfile_notes" />

            <Button
                android:id="@+id/editIllness_buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addEditedIllnessButton"
                android:text="Next"
                app:layout_constraintBottom_toBottomOf="@+id/editIllness_buttonCancel"
                app:layout_constraintStart_toStartOf="@+id/vertical55percent"
                app:layout_constraintTop_toTopOf="@+id/editIllness_buttonCancel" />

            <Button
                android:id="@+id/editIllness_buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:onClick="cancelEditedIllnessButton"
                android:text="Cancel"
                app:layout_constraintEnd_toStartOf="@+id/vertical45percent"
                app:layout_constraintTop_toBottomOf="@+id/editIllnessProfile_enterNotes" />

            <Button
                android:id="@+id/illness_profile_removeButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:layout_marginEnd="80dp"
                android:layout_marginStart="80dp"
                android:layout_marginTop="50dp"
                android:background="@color/colorAccent"
                android:onClick="onIllnessProfile_RemoveButton"
                android:text="@string/IllnessProfile_RemoveButtonName"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editIllness_buttonCancel" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
